--- a/templates/games/_panel.html
+++ b/templates/games/_panel.html
@@ -1,4 +1,4 @@
-<a class="game-tile" href="{{ url_for('game_tables', room_name='Game_1') }}">
+<a class="game-tile" href="{{ url_for('stress.stress_tables') }}">
   <span class="icon">🎮</span>
   <span>Game_1</span>
 </a>
