Rename Game_1 to Stress on tables page

--- a/templates/games/_panel.html
+++ b/templates/games/_panel.html
@@ -1,5 +1,5 @@
 <a class="game-tile" href="{{ url_for('stress.stress_tables') }}">
   <span class="icon">🎮</span>
-  <span>Game_1</span>
+  <span>Stress</span>
 </a>
 <div id="gx-root-chat"></div>
