Fix endpoint: stress.stress_tables -> stress.tables

--- a/templates/games/_panel.html
+++ b/templates/games/_panel.html
@@ -1,4 +1,5 @@
-<a class="game-tile" href="{{ url_for('stress.stress_tables') }}">
+<a class="game-tile" href="{{ url_for('stress.tables') }}">
+
   <span class="icon">🎮</span>
   <span>Stress</span>
 </a>
